syntax = "proto3";
package com.ethyllium.userservice.infrastructure.web.grpc;
option java_multiple_files = true;

service ValidationService {
  rpc validateConversation(ConversationValidationRequest) returns (ConversationValidationResponse) {}
}

message ConversationValidationRequest {
  string senderId = 1;
  string recipientId = 2;
}

enum ConversationValidationStatus {
  CONVERSATION_VALIDATION_STATUS_OK = 0;
  CONVERSATION_VALIDATION_STATUS_NOT_FOUND = 1;
  CONVERSATION_VALIDATION_STATUS_BLOCKED = 2;
  CONVERSATION_VALIDATION_STATUS_BAD_FORMAT = 3;
  CONVERSATION_VALIDATION_STATUS_SENDER_BLOCKED_RECIPIENT = 4;
  CONVERSATION_VALIDATION_STATUS_RECIPIENT_BLOCKED_SENDER = 5;
}

message ConversationValidationResponse {
  ConversationValidationStatus status = 1;
  optional string message = 2;
}